# BayesSC

./: CMakeLists.txt  README.md
core/: BamReader.cpp  BamReader.h  BarCodeContainer.cpp  BarCodeContainer.h  BarCodeParser.cpp  BarCodeParser.h  CMakeLists.txt  Params.cpp  Params.h  Region.cpp  Region.h  ThreadPool.hpp  Utils.cpp  Utils.h  VCF.cpp  VCF.h  Variant.cpp  Variant.h  VariantFileWriter.cpp  VariantFileWriter.h
tools/: CMakeLists.txt  scbayes.cpp
